# rust-playground

./: .gitignore  README
api/: Cargo.toml  README.md  Rocket.toml
api/src/: main.rs
classic-problems/: Cargo.toml  README.md
classic-problems/src/: main.rs
guessing-game/: README.md
guessing-game/src/: main.rs
math/src/: lib.rs
spacestation/: Cargo.toml  README.md
spacestation/src/: main.rs
text-adventure/: Cargo.toml
text-adventure/src/: main.rs
webscraper/: Cargo.toml  README.md
wordcount/: README.md
wordcount/src/: main.rs
