[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
rand_derive2 = "0.1.17"
rand = "0.8.5"
strum = "0.24.1"
strum_macros = "0.24.3" 
